Updating Swagger Config
