# api/openapi.yaml
@@ -12,171 +12,455 @@ info:
   version: 1.0.0
 externalDocs:
   description: GitHub Readme File
-  url: https://github.com/TheCloudGuyOrg/codeAcademy_Photo_Caption_Contest/blob/main/README.md
+  url: >-
+    https://github.com/TheCloudGuyOrg/codeAcademy_Photo_Caption_Contest/blob/main/README.md
 servers:
-- url: /
+  - url: http://localhost:3000
+    variables: {}
+    description: Localhost
 tags:
-- name: /routes/photos
-  description: Routes to Photos URLs
-- name: /routes/users
-  description: Routes to Users URLs
-- name: /routes/captions
-  description: Routes to captions URLs
+  - name: /route/photos
+    description: Routes to Photos URLs
+  - name: /route/users
+    description: Routes to Users URLs
+  - name: /route/captions
+    description: Routes to captions URLs
 paths:
-  /routes/captions/:
+  /route/captions/:
     summary: Captions Root
     description: Root of the captions URL
+    get:
+      tags:
+        - /route/captions
+      summary: Get List of Captions
+      description: Get a List of Captions
+      operationId: getCaptions
+      responses:
+        '200':
+          content:
+            application/json:
+              examples:
+                GetCaptions:
+                  value: |-
+                    {
+                        "status": "Success",
+                        "message": "Caption Information retrieved",
+                        "data": [
+                            {
+                                "id": 103,
+                                "photo_id": 1,
+                                "user_id": 1,
+                                "comment": "This is a test",
+                                "createdAt": "2023-03-26T00:18:01.788Z",
+                                "updatedAt": "2023-03-26T00:18:01.788Z"
+                            }
+                        ]
+                    }
+          description: success
+        default:
+          description: Default error sample response
+      x-swagger-router-controller: Routescaptions
     post:
       tags:
-      - /routes/captions
+        - /route/captions
       summary: Add Caption
       description: Add Caption
       operationId: addCaption
       responses:
+        '201':
+          content:
+            application/json:
+              examples:
+                PostCaptions:
+                  value: |-
+                    {
+                        "status": "Success",
+                        "message": "New Caption Created",
+                        "data": {
+                            "id": 103,
+                            "photo_id": 1,
+                            "user_id": 1,
+                            "comment": "This is a test",
+                            "updatedAt": "2023-03-26T00:18:01.788Z",
+                            "createdAt": "2023-03-26T00:18:01.788Z"
+                        }
+                    }
+          description: success
         default:
           description: Default error sample response
       x-swagger-router-controller: Routescaptions
-  /routes/captions/:id:
+  /route/captions/:id:
     summary: Captions by Id
     description: URL to Captions by Id
     get:
       tags:
-      - /routes/captions
+        - /route/captions
       summary: Get Caption by Id
       description: Get Caption by Id
       operationId: getCaptionById
       responses:
+        '200':
+          content:
+            application/json:
+              examples:
+                GetCaptionsById:
+                  value: |-
+                    {
+                        "status": "Success",
+                        "message": "Caption Information retrieved",
+                        "data": [
+                            {
+                                "id": 103,
+                                "photo_id": 1,
+                                "user_id": 1,
+                                "comment": "This is a test",
+                                "createdAt": "2023-03-26T00:18:01.788Z",
+                                "updatedAt": "2023-03-26T00:18:01.788Z"
+                            }
+                        ]
+                    }
+          description: success
         default:
           description: Default error sample response
       x-swagger-router-controller: Routescaptions
     put:
       tags:
-      - /routes/captions
+        - /route/captions
       summary: Update Caption
       description: Update Caption
       operationId: updateCaption
       responses:
+        '200':
+          content:
+            application/json:
+              examples:
+                PutCaption:
+                  value: |-
+                    {
+                        "status": "Success",
+                        "message": "Caption with ID 103 updated",
+                        "data": [
+                            1
+                        ]
+                    }
+          description: success
         default:
           description: Default error sample response
       x-swagger-router-controller: Routescaptions
     delete:
       tags:
-      - /routes/captions
+        - /route/captions
       summary: Delete Caption
       description: Delete Caption
       operationId: deleteCaption
       responses:
+        '200':
+          content:
+            application/json:
+              examples:
+                DeleteCaption:
+                  value: |-
+                    {
+                        "status": "Success",
+                        "message": "Caption with ID 103 deleted",
+                        "data": 1
+                    }
+          description: success
         default:
           description: Default error sample response
       x-swagger-router-controller: Routescaptions
-  /routes/photos/:
+  /route/photos/:
     summary: Photos Root
     description: Photos Root
     get:
       tags:
-      - /routes/photos
+        - /route/photos
       summary: Get List of Photos
       description: Get a List of Photos
       operationId: getPhotos
       responses:
+        '200':
+          content:
+            application/json:
+              examples:
+                GetPhotos:
+                  value: |-
+                    {
+                        "status": "Success",
+                        "message": "Photo Information retrieved",
+                        "data": [
+                            {
+                                "id": 1235,
+                                "name": "Photo_Test",
+                                "url": "file://Photo_Test",
+                                "citation": "Daisy Rue Cox'",
+                                "createdAt": "2023-03-25T23:47:23.554Z",
+                                "updatedAt": "2023-03-25T23:47:23.554Z"
+                            }
+                        ]
+                    }
+          description: success
         default:
           description: Default error sample response
       x-swagger-router-controller: Routesphotos
     post:
       tags:
-      - /routes/photos
+        - /route/photos
       summary: Add Photo
       description: Add Photo
       operationId: addPhotos
       responses:
+        '201':
+          content:
+            application/json:
+              examples:
+                PostPhotos:
+                  value: |-
+                    {
+                        "status": "Success",
+                        "message": "New Photo Created",
+                        "data": {
+                            "id": 1236,
+                            "name": "Photo_Test",
+                            "url": "file://Photo_Test",
+                            "citation": "Daisy Rue Cox'",
+                            "updatedAt": "2023-03-26T00:01:36.893Z",
+                            "createdAt": "2023-03-26T00:01:36.893Z"
+                        }
+                    }
+          description: success
         default:
           description: Default error sample response
       x-swagger-router-controller: Routesphotos
-  /routes/photos/:id:
+  /route/photos/:id:
     summary: Photos by ID
     description: URL to Photos by Id
     get:
       tags:
-      - /routes/photos
+        - /route/photos
       summary: Get Photos by Id
       description: Get Photos by Id
       operationId: getPhotosById
       responses:
+        '200':
+          content:
+            application/json:
+              examples:
+                GetPhotosById:
+                  value: |-
+                    {
+                        "status": "Success",
+                        "message": "Photo Information retrieved",
+                        "data": [
+                            {
+                                "id": 1236,
+                                "name": "Photo_Test",
+                                "url": "file://Photo_Test",
+                                "citation": "Daisy Rue Cox'",
+                                "createdAt": "2023-03-26T00:01:36.893Z",
+                                "updatedAt": "2023-03-26T00:01:36.893Z"
+                            }
+                        ]
+                    }
+          description: success
         default:
           description: Default error sample response
       x-swagger-router-controller: Routesphotos
     put:
       tags:
-      - /routes/photos
+        - /route/photos
       summary: Update Photo
       description: Update Photo
       operationId: updatePhotos
       responses:
+        '200':
+          content:
+            application/json:
+              examples:
+                PutPhotos:
+                  value: |-
+                    {
+                        "status": "Success",
+                        "message": "Photo with ID 1236 updated",
+                        "data": [
+                            1
+                        ]
+                    }
+          description: success
         default:
           description: Default error sample response
       x-swagger-router-controller: Routesphotos
     delete:
       tags:
-      - /routes/photos
+        - /route/photos
       summary: Delete Photo
       description: Delete Photo
       operationId: deletePhotos
       responses:
+        '200':
+          content:
+            application/json:
+              examples:
+                DeletePhotos:
+                  value: |-
+                    {
+                        "status": "Success",
+                        "message": "Photo with ID 1236 deleted",
+                        "data": 1
+                    }
+          description: success
         default:
           description: Default error sample response
       x-swagger-router-controller: Routesphotos
-  /routes/users/:
+  /route/users/:
     summary: Users Root
     description: Root of the users URL
     get:
       tags:
-      - /routes/users
+        - /route/users
       summary: Get List of Users
       description: Get List of Users
       operationId: getUsers
       responses:
+        '200':
+          content:
+            application/json:
+              examples:
+                GetUsers:
+                  value: |-
+                    {
+                        "status": "Success",
+                        "message": "User Information retrieved",
+                        "data": [
+                            {
+                                "id": 647,
+                                "name": "User_Test",
+                                "email": "user.test@testdomain.com",
+                                "password": "P@ssw0rd",
+                                "createdAt": "2023-03-26T00:10:42.949Z",
+                                "updatedAt": "2023-03-26T00:10:42.949Z"
+                            }
+                        ]
+                    }
+          description: success
         default:
           description: Default error sample response
       x-swagger-router-controller: Routesusers
     post:
       tags:
-      - /routes/users
+        - /route/users
       summary: Add User
       description: Add User
       operationId: addUser
       responses:
+        '201':
+          content:
+            application/json:
+              examples:
+                PostUsers:
+                  value: |-
+                    {
+                        "status": "Success",
+                        "message": "New User Created",
+                        "data": {
+                            "id": 647,
+                            "name": "User_Test",
+                            "email": "user.test@testdomain.com",
+                            "password": "P@ssw0rd",
+                            "updatedAt": "2023-03-26T00:10:42.949Z",
+                            "createdAt": "2023-03-26T00:10:42.949Z"
+                        }
+                    }
+          description: success
         default:
           description: Default error sample response
       x-swagger-router-controller: Routesusers
-  /routes/users/:id:
+  /route/users/:id:
     summary: Users by Id
     description: URL to Users by Id
     get:
       tags:
-      - /routes/users
+        - /route/users
       summary: Get Users by Id
       description: Get Users by Id
       operationId: getUsersById
       responses:
+        '200':
+          content:
+            application/json:
+              examples:
+                GetUserById:
+                  value: |-
+                    {
+                        "status": "Success",
+                        "message": "User Information retrieved",
+                        "data": [
+                            {
+                                "id": 647,
+                                "name": "User_Test",
+                                "email": "user.test@testdomain.com",
+                                "password": "P@ssw0rd",
+                                "createdAt": "2023-03-26T00:10:42.949Z",
+                                "updatedAt": "2023-03-26T00:10:42.949Z"
+                            }
+                        ]
+                    }
+          description: success
         default:
           description: Default error sample response
       x-swagger-router-controller: Routesusers
     put:
       tags:
-      - /routes/users
+        - /route/users
       summary: Update Users
       description: Update Users
       operationId: updateUsers
       responses:
+        '200':
+          content:
+            application/json:
+              examples:
+                PutUsers:
+                  value: |-
+                    {
+                        "status": "Success",
+                        "message": "User with ID 647 updated",
+                        "data": [
+                            1
+                        ]
+                    }
+          description: success
         default:
           description: Default error sample response
       x-swagger-router-controller: Routesusers
-  /routes/users/login:
+    delete:
+      tags:
+        - /route/users
+      summary: Delete User
+      description: Delete User
+      operationId: deleteUsers
+      responses:
+        '200':
+          content:
+            application/json:
+              examples:
+                DeleteUsers:
+                  value: |-
+                    {
+                        "status": "Success",
+                        "message": "User with ID 647 deleted",
+                        "data": 1
+                    }
+          description: success
+        default:
+          description: Default error sample response
+      x-swagger-router-controller: Routesuser
+  /route/users/login:
     summary: User Logins
     description: URL to Logins
     post:
       tags:
-      - /routes/users
+        - /route/users
       summary: Add Login
       description: Add Login
       operationId: addLogin
